added save button, doesn't connect to anything yet

--- a/app/src/main/res/layout/content_recipe_input.xml
+++ b/app/src/main/res/layout/content_recipe_input.xml
@@ -71,5 +71,12 @@
             android:layout_weight="0.40"
             android:text="mix all ingredients, bake for 10 min" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SAVE"
+            android:id="@+id/save"
+            android:layout_gravity="center_horizontal" />
+
     </LinearLayout>
 </RelativeLayout>
