--- a/app/src/main/res/layout/activity_recipe_input.xml
+++ b/app/src/main/res/layout/activity_recipe_input.xml
@@ -22,7 +22,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_recipe_input"
-        android:id="@+id/saveB" />
+        android:id="@+id/toolbar_layout" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
